--- a/server/src/package.json
+++ b/server/src/package.json
@@ -9,6 +9,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.1",
     "mongoose": "^5.1.0"
   },
